now header is fixed ALWAYS, also trying to fix height problem on mobile, changing the html height to 100% instead of 100vh

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,7 +2,7 @@ html{
     margin: 0;
     padding: 0;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
 }
 
 body{
