--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -28,7 +28,7 @@ a{
     /* background-color: lightgreen; */
 }
 .menuicon{
-    font-size: 4rem;
+    font-size: 3rem;
     color: black;
     /* background-color: green; */
 }
