--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,11 +1,11 @@
 /* for smartphone */
 .main-wrapper{
-    position: absolute;
+    position: relative;
     width: 100%;
     height: 100%;
 }
 .home-wrapper{
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
@@ -28,14 +28,13 @@
     z-index: 1;
     /* header is now fixed to top */
     position: sticky;
-    top: 0;
-    
+    top:0;
 }
 
 .g_content-main{
     grid-column: 1 / 13;
     grid-row: 1 / span 2;
-    z-index: -1;
+    z-index: 0;
 }
 
 .g_gallery{
